  - BUG: fix a newPopByIndID bug where keepAncestralPops is not respected.
  - NEW: nuclearFamilySampler operator and function
  - NEW: add MATE_UniformDistribution number of offspring type
  - BUG: fix a useAncestralGen bug in largePedigreeSample (Does not affect output).
  - BUG: fix a typo in function SaveLinkage, I really need to test these functions as well.
  - BUG: fix a SWIG option bug that prevents help messages of member functions to display

version 0.7.9 - (Rev 885) Apr 3, 2007
  - BUG (build): add solaris support. This OS does not have stdint.h.
  - BUG (build): add support for python 2.5 on 64 bit machines (new Py_ssize_t type for python2.5)
  - NEW: add SaveSolarFrqFile in simuUtil.py
  - NEW: separate SaveQTDT in SaveMerlinDatFile, SaveMerlinMapFile and SaveMerlinPedFile
		SaveQTDT now calls these three functions.
  - NEW: rewrite newPopByIndID and speed up sample generation considerably.
  - NEW: add scripts/simuHWE.py that demonstrate the temorary deviation from HWE in a
		population with unequal male and female allele frequencies, from Yaji Xu.
  - BUG: fix a bug in the calculation of D'
  - NEW: add LD measurement delta^2
  - NEW: add LD_param parameter to have finer control over how LD is calculated
  - NEW: add exphetero_param, Fst_param, alleleFreq_param etc to have better
	    control over the calculation of these statistics.
  - CHG: midValues of LD is replaced by LD_param={'midValues':True}
  - NEW: add association statistics (ChiSq, UC_U, CramerV)
  - BUG: fix passing of relMethod parameter of stat operator
  - CHG: NO_CONVERSION is no longer the default for rpy


version 0.7.8 - (Rev 833) Mar 2, 2007
  - BUG: fix broken user interactive input
  - BUG: fix help feature of tkinter dialog
  - NEW: bundle boost 1.33.1 with source package
  - BUG (build): fix a SConstruct bug with MSVC environment variables
  - NEW: add other LD measurements to simuLDDecay.py
  - NEW: optionally add header to QTDT ped file